# loamss

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  adapter-interface.md  audit-spec.md  benchmarks.md  capsule-spec.md  cli.md  console-design.md  extensibility.md  mcp-surface.md  memory-layer.md  native-apps.md  permission-model.md  scenarios.md  sources.md  topology.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_question.md
.github/workflows/: ci.yml  release.yml
console/: .gitignore  CLAUDE.md  README.md  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts
console/src/app/: globals.css  layout.tsx  page.tsx
console/src/lib/: dashboard-state.ts  runtime-client.ts  setup-token.ts  wizard-state.ts
deploy/: cloud-run-teardown.sh  cloud-run.sh
docs/: build-your-first-capsule.md  build-your-first-source-connector.md  capsule-ingestor-primitives.md  connect-your-app.md  demo-script-90s.md  deploying.md  getting-started.md  memory-pgvector.md  plan-v0.2.md  rfc-cloud-deployment.md  setup-gmail.md  storage-s3.md  use-cases.md
homebrew/: README.md
homebrew/Formula/: loamss.rb
runtime/: .golangci.yml  CLAUDE.md  Makefile  README.md  go.mod  go.sum
runtime/cmd/loamss/: main.go
runtime/scripts/: smoke_seed.go
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/hello-world/: capsule.yaml
sdk/python/examples/hello-world/src/: main.py
sdk/python/loamss/: __init__.py  capsule.py  content.py  jsonrpc.py  manifest.py  runtime.py  tool.py  transport.py
sdk/python/tests/: test_capsule.py  test_jsonrpc.py  test_transport.py
sdk/typescript/: .gitignore  CLAUDE.md  README.md  package.json  tsconfig.build.json  tsconfig.json
(+297 files in other folders)
