[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loamss-sdk"
version = "0.1.0"
description = "Python SDK for building Loamss capsules"
readme = "README.md"
authors = [
  { name = "Loamss contributors" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
# Zero runtime deps — same contract as the TS SDK. The wire is
# JSON-RPC; we use the standard library's json + asyncio + the
# typing facilities Python 3.11 already provides.
dependencies = []
keywords = ["loamss", "mcp", "personal-data", "capsule"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/loamss/loamss"
Documentation = "https://github.com/loamss/loamss/tree/main/sdk/python"
Repository = "https://github.com/loamss/loamss"
Issues = "https://github.com/loamss/loamss/issues"

[tool.hatch.build.targets.wheel]
packages = ["loamss"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "SIM", # simplify
]
ignore = [
  # We catch broad exceptions deliberately at transport boundaries
  # (handler failures must not crash the read loop). The targeted
  # # noqa comments justify each instance.
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
